--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 #exclude workspace cache
 .obsidian/workspace/*
+.obsidian/workspace.json
+.obsidian/workspace-mobile.json
 
 # Exclude Untitled Notes
 Untitled*
